--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE <html>
 <html>
 <head>
-  <meta charset =´utf-8´>
+   <meta charset ='utf-8'>
+   <metahttp-equiv='X-UA-compatible'content='IE=edge'>
+   <title>TITULODAABA</title>/title>
+   <meta name ='viewport'content ='width =devide-width,initial-scale=1>'
+   <link rel= 'stylsheet'type ='text/css'media='screen'href= 'tyle.css'>
+   
